--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "swagger:generate": "ts-node swagger.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts"
+    "predev": "npm run swagger:generate",
+    "dev": "nodemon src/app.ts",
+    "prestart": "npm run swagger:generate",
+    "start": "node dist/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,14 +21,19 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.9",
+    "swagger-autogen": "^2.23.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
