파일 출력 경로 수정
 - js 빌드시 dist 폴더에 생성되도록 변경

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "predev": "npm run swagger:generate",
     "dev": "nodemon src/app.ts",
     "prestart": "npm run swagger:generate",
-    "start": "node dist/app.ts"
+    "start": "node dist/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
