서버 설정 변경
 - aws 서버 적용위해 설정 일부 수정

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "swagger:generate": "ts-node swagger.ts",
+    "swagger:generate": "ts-node src/swagger.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "predev": "npm run swagger:generate",
     "dev": "nodemon src/app.ts",
